# Vertical-AI-Architect-Healthcare-

./: .gitignore  README.md  TODO.md
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  main.py  pyproject.toml  requirements.txt
backend/api/: decision_support.py  drugs.py  notes.py  timeline.py
backend/api/admin/: router.py
backend/api/alerts/: router.py
backend/api/analytics/: router.py
backend/api/billing/: router.py
backend/api/compliance/: router.py
backend/api/fhir/: router.py
backend/api/org/: router.py
backend/auth/: __init__.py  cognito.py  tenant.py
backend/db/: notes_repository.py  org_repository.py  timeline_repository.py
backend/middleware/: __init__.py  error_handler.py  request_id.py
backend/models/: __init__.py  requests.py  responses.py
backend/services/: bedrock.py  comprehend_medical.py  fhir.py  transcribe.py
backend/services/alerts/: __init__.py  connection_manager.py  publisher.py
backend/services/analytics/: __init__.py  metrics.py
backend/services/billing/: __init__.py  stripe_service.py  usage_tracker.py
backend/services/compliance/: __init__.py  audit.py
backend/services/notifications/: __init__.py  email.py  scheduler.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_models.py  test_services.py
docs/: github-push.md  setup.md
docs/api/: api-reference.md
docs/pitch-deck/: executive-summary.md  pitch-deck.md
docs/security/: security_scan.py  (+1 more)
frontend/: .env.example  index.html  package-lock.json  package.json
mobile/: .env.example  App.tsx  package.json
(+36 files in other folders)
